# django-cms

./: .aldryn  .babelrc  .bowerrc  .cache.node_modules.txt  .coverage.R6LPD7K4MW.local.60396.XTXHxeAx  .coverage.rc  .coveragerc  .coveralls.yml  .csscomb.json  .dockerignore  .editorconfig  .env-local  .eslintrc.js  .eslintrc.json  .gitignore  .hgignore  .hgtags  .jscsrc  .jshintrc  .landscape.yaml  .pre-commit-config.yaml  .pre-commit-config.yml  .project  .pydevproject  .readthedocs.yaml  .readthedocs.yml  .squash.yaml  .squash.yml  .stylelintrc.js  .travis.yml  0.7  AUTHORS  CHANGELOG.rst  CHANGELOG.txt  CHANGELOG.txt.py  CLAUDE.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  FASTER_NPM_BUILDS.md  (+58 more)
.github/: CONTRIBUTING.rst  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation-report.md  ---feature-requests.md  ---question.md  config.yml
.github/workflows/: codeql.yml  develop_djangocms.yml  docs.yml  edgetest.yml  frontend-v5.yml  frontend.yml  lint-pr.yml  linters.yml  make-release.yml  new_contributor_pr.yml  pre-commit.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  pythonpackage.yml  releases.yml  snyk-security.yml  spelling.yml  stale.yml  static.yml  test.yml  test_startcmsproject.yml
.tx/: config
ESOF-docs/: main.txt
Feature/: Feature_explanation.txt  feature.html
addons/: .gitignore
addons-dev/: .gitignore
addons/aldryn-addons/: addon.json  aldryn_config.py
addons/aldryn-background-image/: addon.json
addons/aldryn-bootstrap3/: addon.json  aldryn_config.py  settings.json
addons/aldryn-devsync/: addon.json  aldryn_config.py  settings.json
addons/aldryn-django/: addon.json  aldryn_config.py  settings.json
addons/aldryn-django-cms/: addon.json  aldryn_config.py  settings.json
addons/aldryn-forms/: addon.json  aldryn_config.py  settings.json
addons/aldryn-newsblog/: addon.json  aldryn_config.py
cms/: __init__.py  __main__.py  api.py  app_base.py  app_registration.py  apphook_pool.py  appresolver.py  apps.py  cms_config.py  cms_menus.py  cms_plugins.py  cms_toolbar.py  cms_toolbars.py  cms_wizards.py  compat.py  compat_forms.py  constants.py  context_processors.py  dbgettext_registration.py  exceptions.py  managers.py  menu.py  menu_bases.py  middleware.py  models.py  operations.py  page_plugin.py  page_rendering.py  plugin_base.py  plugin_context.py  plugin_pool.py  plugin_processors.py  plugin_rendering.py  settings.py  signals.py  templates.py  tests.py  toolbar.py  toolbar_base.py  toolbar_pool.py  (+4 more)
debug_toolbar/: middleware.py  settings.py  stats.py
django_evolution/: __init__.py  admin.py  diff.py  evolve.py  models.py  mutations.py  signature.py  utils.py
docs/: Makefile  README.rst  api_references.rst  app_integration.rst  app_integration.txt  compatibility.include  conf.py  configuration.rst  configuration.txt  contributing.rst  contribution.rst  contribution.txt  custom_plugins.rst  custom_plugins.txt  django_settings.py  extending_examples.rst  i18n.rst  index.rst  index.txt  installation.rst  installation.txt  navigation.rst  navigation.txt  placeholders.rst  placeholders.txt  plugin_reference.rst  plugins.rst  plugins.txt  readecosystem.py  readme.txt  requirements.in  requirements.txt  requirements.txt.py  searchdocs.rst  settings.rst  sitemap.rst  spelling_wordlist  templatetags.rst  templatetags.txt  tutorial.rst  (+2 more)
example/: cms.db  manage.py  settings.py  urls.py
menu/: base.py  exceptions.py  menu.py  menu_pool.py  modifiers.py
menus/: __init__.py  apps.py  base.py  docs.txt  exceptions.py  menu_pool.py  middleware.py  models.py  modifiers.py  settings.py  settings_patch.py  utils.py
mptt/: __init__.py  exceptions.py  forms.py  managers--with rebuild.py  managers.py  models.py  signals.py  utils.py
project/: admin.py  cms_plugins.py  models.py  views.py
publisher/: __init__.py  base.py  errors.py  manager.py  models.py  mptt_support.py  options.py  publisher.py  query.py  support_mptt.py
publisher-old/: __init__.py  base.py
reversion/: __init__.py  admin.py  managers.py  middleware.py  models.py  registration.py  revisions.py  storage.py
scripts/: COMPATIBILITY.md  filter-locale-changes  functions  install-npm-dependencies.sh  make-changelog  make-release  prepare-buildenv  publish-release  transifex-pull-strings  transifex-send-strings
stacks/: admin.py  cms_plugins.py  fields.py  models.py
static/: iconset.json
templates/: 404.html  500.html  base.html  base_iframe.html  base_root.html  content.html  dark.html  dark_with_image.html  default.html  light.html  light_with_image.html  sidebar.html
test-requirements/: django-1.3.txt  django-1.4.txt  django-master.txt  latest.txt
test_requirements/: databases.txt  django-1.10.txt  django-1.11.txt  django-1.3.txt  django-1.4.txt  django-1.5.txt  django-1.6.txt  django-1.6.txt.py  django-1.7.txt  django-1.7.txt.py  django-1.8.txt  django-1.8.txt.py  django-1.9.txt  django-1.9.txt.py  django-2.0.txt  django-2.1.txt  django-2.2.txt  django-3.0.txt  django-3.1.txt  django-3.2.txt  django-4.0.txt  django-4.1.txt  django-4.2.txt  django-5.0.txt  django-5.1.txt  django-5.2.txt  django-6.0.txt  django-6.1.txt  django-trunk.txt  docs.txt  mysql.txt  postgres.txt  requirement_base_django_main.txt  requirements_base.txt  requirements_base.txt.py  selenium-1.4.txt  selenium-1.5.txt  selenium-1.6.txt  selenium-trunk.txt
tests/: .coveragerc  TEST-cms.tests.menu.MenusTestCase.xml  TEST-cms.tests.navextender.NavExtenderTestCase.xml  TEST-cms.tests.page.PagesTestCase.xml  TEST-cms.tests.permmod.PermissionModeratorTestCase.xml  TEST-cms.tests.placeholder.PlaceholderTestCase.xml  TEST-cms.tests.plugins.PluginsTestCase.xml  TEST-cms.tests.rendering.RenderingTestCase.xml  TEST-cms.tests.site.SiteTestCase.xml  TEST-doctest.DocTestCase.xml  bootstrap.py  buildout.cfg  coverage.xml  django-1.3.txt  django-1.4.txt  django-12.cfg  django-124.cfg  django-13.cfg  django-14.cfg  django-all.cfg  django-svn.cfg  django-trunk.cfg  requirements_base.txt
tp/: manage.py
(+4340 files in other folders)
