[bdist_wheel]
universal=1

[codespell]
ignore-words-list = cant,statics,groupe
skip = package-lock.json,*.js,*.po,./node_modules/*,./.idea/*,./docs/env/*,./docs/build/*,./.env/*,./.venv/*,./build/*,./django_cms.egg-info/*,./.git


[options]
install_requires =
    Django>=2.2,<5.0
python_requires = >=3.7

