[metadata]
name = django-cms
version = attr: cms.__version__
url = https://www.django-cms.org/
author = Django CMS Association and contributors
author_email = info@django-cms.org
description = Lean enterprise content management powered by Django.
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
   Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Documentation = https://docs.django-cms.org/
    Release notes = https://docs.django-cms.org/en/latest/upgrade/index.html
    Community = https://discord-support-channel.django-cms.org
    Source = https://github.com/django-cms/django-cms

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
test_suite = runtests.main
install_requires =
    Django >= 2.2
    django-classy-tags >=0.7.2
    django-formtools >=2.1
    django-treebeard >=4.3
    django-sekizai >=0.7
    djangocms-admin-style >=1.2
    packaging
    setuptools
[options.entry_points]
console_scripts =
    djangocms = cms.management.djangocms:execute_from_command_line

[options.extras_require]
argon2 = argon2-cffi >= 19.1.0
bcrypt = bcrypt

[bdist_wheel]
universal=1

[codespell]
ignore-words-list = cant,statics,groupe,manuel,uptodate,assertIn
skip = package-lock.json,*.js,*.js.html,*.po,./node_modules/*,./.idea/*,./docs/env/*,./docs/build/*,./.env/*,./.venv/*,./build/*,./django_cms.egg-info/*,./.git,./cms/test_utils/project/sampleapp/models.py,./venv/*,./docs/spelling_wordlist
