[bdist_wheel]
universal=1

[codespell]
ignore-words-list = cant,statics,groupe,assertIn
skip = package-lock.json,*.js,*.po,./node_modules/*,./.idea/*,./docs/env/*,./docs/build/*,./.env/*,./.venv/*,./build/*,./django_cms.egg-info/*,./.git,./setup.cfg


[options]
install_requires =
    Django>=3.2,<5.2
python_requires = >=3.7

